--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </script>
             <style>
                 #home {
-                    background-color: #6B3EF6;
+                    background-color: #ffffff;
                     pointer-events: none;
                 }
                 body {
                     margin: 0;
-                    background-color: #6B3EF6;
+                    background-color: #ffffff;
                     font-family: Arial, Helvetica, sans-serif;
                 }
 
