--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </script>
             <style>
                 #home {
-                    background-color: #E33C67;
+                    background-color: #A32B4A;
                     pointer-events: none;
                 }
                 body {
