--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
             </script>
             <style>
                 #dropdown-btn {
-                    background-color: #3E6DF6;
+                    background-color: #A32B4A;
                     pointer-events: none;
                 }
                 #arrow {
