--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         </script> 
         <style>
             #contact {
-                background-color: #3EC9F6;
+                background-color: #A32B4A;
             }
             #contact {
                 pointer-events: none;
