--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             </script>
             <style>
                 #about {
-                    background-color: #ffffff;
+                    background-color: #A32B4A;
                 }
                 #about {
                     pointer-events: none;
