--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <div id="header"></div>
-        <div class="section1">
+        <div class="body">
             <p>text will go here</p>
         </div>
         <div id="footer"></div>
