--- a/dropdown-content/childrensstories.html
+++ b/dropdown-content/childrensstories.html
@@ -41,22 +41,16 @@
     </head>
     <body>
         <div id="header"></div>
-        <div class="section1">
+        <div class="body">
             <h1>Introduction to Children’s Stories</h1>
             <iframe type="text/html" src="https://docs.google.com/document/d/e/2PACX-1vQX4XZpRd-XXlegp4MLbN9EB9W0l1qdYLXyAE-Jod3SQXd4fAgtgbWhS-9ZGJdhxXZziCqtU_CtvhHB/pub?embedded=true" allowtransparency="true" marginwidth="0px" marginheight="0px" width="1200px" height="200px" frameborder="0" scrolling="no" style="overflow:hidden; margin-left: 60px; background-color: transparent"></iframe>
-        </div>
-        <div class="section2">
             <iframe width="480px" height="420px" style="margin-left:40px; background-color: transparent; position: absolute; z-index: 0;" frameborder="0"></iframe>
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vQRw-4oWgUJ-Ae4_WeZ3rbm21rjVctBfv0dIlLokO17ouPZ8E7ubBCUo6En5scL_A/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-left: 40px">Loading...</iframe>
             <iframe width="480px" height="420px" style="margin-left:40px; background-color: transparent; position: absolute; z-index: 0;" frameborder="0"></iframe>
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vRE7J8oET_CV3A4tzdodTT3rlZSMUgsAAB4nueLM_o9iyLXPS2FYBAo6h3wt7mD3g/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-top:10px; margin-left: 40px">Loading...</iframe>
-        </div>
-        <div class="section3">
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vQsNSBBP-r6XX1qQBQa8Jg_tVoiKuyOFkrpxLu7GHpX7WjtmUcEQOn6QcvhfcJASw/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-left: 40px">Loading...</iframe>
             <iframe width="480px" height="420px" style="margin-left:40px; background-color: transparent; position: absolute; z-index: 0;" frameborder="0"></iframe>
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ5CpVbvA6pzNbXBZH6kGzhrISf4NvQiEghDBwEYWF9u_s5IExix3e-emb7ih-fgg/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-top:10px; margin-left: 40px">Loading...</iframe>
-        </div>
-        <div class="section3">
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vRQbNzbeUAZhh82kHMAJDhdYyvSJaiMjaPYalO-RvmWIXSJK-HbJbWYz_8fN1TVeA/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-left: 40px">Loading...</iframe>
             <iframe width="480px" height="420px" style="margin-left:40px; background-color: transparent; position: absolute; z-index: 0;" frameborder="0"></iframe>
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vRlpJzx5EQib5K7ErAx3mi69NHLkVjwAYojbX5ZvnUfY50NL8MAGptKdud3aIvkqw/pub?embedded=true" width="38.4%" height="400px" frameborder="0" scrolling="yes" style="overflow:hidden; margin-top:10px; margin-left: 40px">Loading...</iframe>
