--- a/dropdown-content/drama.html
+++ b/dropdown-content/drama.html
@@ -43,7 +43,7 @@
     <body>
         <div id="header"></div>
         <div class="section1">
-            <h1>Introduction to Drama</h1>
+            <div class="body">
             <iframe type="text/html" src="https://docs.google.com/document/d/e/2PACX-1vRRqZUsO4p1ch38KbpTHKl9P3FNnTIVgOzoL7xMm_UrCNJEy2U-EPxCbc9Sie54_w/pub?embedded=true" width="1200px" height="1000px" frameborder="0" scrolling="no" style="background-color: transparent; overflow:hidden; margin-left: 140px"></iframe>
         </div>
         <div id="footer"></div>
