--- a/dropdown-content/poetry.html
+++ b/dropdown-content/poetry.html
@@ -43,7 +43,7 @@
     </head>
     <body>
         <div id="header"></div>
-        <div class="section1">
+        <div class="body">
             <h1>Introduction to Poetry</h1>
             <iframe type="text/html" src="https://docs.google.com/document/d/e/2PACX-1vQyJ3iscBpf58DrX9eRo0huuXzhGyIR5EOc9tj59qnUigUJlZa22Qj6HZtu1H8Hd9djr7IXfdpteRuL/pub?embedded=true" width="1200px" height="1000px" frameborder="0" scrolling="no" style="overflow:hidden; margin-left: 40px"></iframe>
         </div>
