--- a/dropdown-content/torahcommentary.html
+++ b/dropdown-content/torahcommentary.html
@@ -41,7 +41,7 @@
     </head>
     <body>
         <div id="header"></div>
-        <div class="section1">
+        <div class="body">
             <h1>Introduction to Torah Commentary</h1>
             <iframe type="text/html" src="--" allowtransparency="true" marginwidth="0px" marginheight="0px" width="1200px" height="1000px" frameborder="0" scrolling="no" style="overflow:hidden; margin-left: 120px; background-color: transparent"></iframe>
         </div>
