--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
                 #about {
                     pointer-events: none;
                 }
+                body {
+                margin: 0;
+                background-color: #ffffff;
+                }
             </style>
     </head>
     <body>
