--- a/work.html
+++ b/work.html
@@ -25,7 +25,10 @@
                 #arrow {
                     transform: rotate(180deg);
                 }
-                
+                body {
+                margin: 0;
+                background-color: #ffffff;
+                }
             </style>
     </head>
     <body>
