--- a/dropdown-content/drama.html
+++ b/dropdown-content/drama.html
@@ -37,6 +37,10 @@
                     background-color: #A32B4A;
                     pointer-events: none;
                 }
+                body {
+                margin: 0;
+                background-color: #ffffff;
+                }
 
             </style>
     </head>
