--- a/dropdown-content/philosophy.html
+++ b/dropdown-content/philosophy.html
@@ -44,6 +44,10 @@
                     background-color: #A32B4A;
                     pointer-events: none;
                 }
+                body {
+                margin: 0;
+                background-color: #ffffff;
+                }
             </style>
     </head>
     <body>
