--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             </script>
             <style>
                 #about {
-                    background-color: #A32B4A;
+                    background-color: #116A7B;
                 }
                 #about {
                     pointer-events: none;
