--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         </script>
         <style>
             #contact {
-                background-color: #A32B4A;
+                background-color: #116A7B;
             }
             #contact {
                 pointer-events: none;
