--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             </script>
             <style>
                 #home {
-                    background-color: #A32B4A;
+                    background-color: #116A7B;
                     pointer-events: none;
                 }
                 body {
