--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
             </script>
             <style>
                 #dropdown-btn {
-                    background-color: #A32B4A;
+                    background-color: #116A7B;
                     pointer-events: none;
                 }
                 #arrow {
