--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
     <body>
         <footer style="padding: 15px;background-color: #E33C67" class="background">
             <p style="color: #E9FAFF; text-align: right" class="text-footer">
-                Copyright ©-All rights are reserved
+                Copyright &copy;-All rights are reserved
             </p>
         </footer>
         <main>
