--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Howard Zilber |About</title>
-        <link rel="icon" type="image/png" sizes="16x16" href="../../src/images/howardzilber_website_512x512_icon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/images/howardzilber_website_512x512_icon.png">
         <link rel="stylesheet" href="../../css/body.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <script
