--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Howard Zilber |Contact</title>
-        <link rel="icon" type="image/png" sizes="16x16" href="../../src/images/howardzilber_website_512x512_icon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/images/howardzilber_website_512x512_icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script
             src="https://code.jquery.com/jquery-3.3.1.js"
