--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
         <title>Howard Zilber |Home</title>
-        <link rel="icon" type="image/png" sizes="16x16" href="../../images/howardzilber_website_512x512_icon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/images/howardzilber_website_512x512_icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <script
                 src="https://code.jquery.com/jquery-3.3.1.js"
