--- a/menu.html
+++ b/menu.html
@@ -3,23 +3,24 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="index.html">Zoey Zilber</a>
+      <a href="index.html">Howard Zilber</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img src="images/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
       <a class="menu-index" href="index.html">Home</a>
-      <a class="menu-engineering" href="engineering.html">Engineering</a>
-      <a class="menu-theatre" href="theatre.html">Theatre</a>
       <div class="dropdown">
-        <a class="dropbtn" href="projects.html">Projects<i class="fas fa-caret-down"></i></a>
+        <a class="dropbtn" href="projects.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
-          <a href="computer.html">Computer</a>
-          <a href="braillekeyboard.html">Braille Keyboard</a>
-          <a href="guitar.html">Guitar</a>
+          <a href="dropdown-content/childrensstories.html">Children's Stories</a>
+          <a href="dropdown-content/drama.html">Drama</a>
+          <a href="dropdown-content/philosophy.html">Philosophy</a>
+          <a href="dropdown-content/poetry.html">Poetry</a>
+          <a href="dropdown-content/torahcommentary.html">Torah Commentary</a>
         </div>
       </div>
+      <a class="menu-contact" href="about.html">About</a>
       <a class="menu-contact" href="contact.html">Contact</a>
     </div>
   </div>
