--- a/footer.html
+++ b/footer.html
@@ -2,17 +2,18 @@
 
 <html>
     <head>
-        
-    </head>
-        
-    <body>
-        <footer style="padding: 15px;background-color: #E33C67" class="background">
-            <p style="color: #E9FAFF; text-align: right" class="text-footer">
-                Copyright &copy;-All rights are reserved
-            </p>
-        </footer>
-        <main>
-            <header-component></header-component>
-        </main>
-    </body>
+    <div class="banner">
+     <div class="banner-table flex-row-space-between">
+    <div class="banner-items flex-row-left flex-item">
+      <a class="menu-index" href="index.html">Home</a><br>
+      <a class="menu-engineering" href="engineering.html">Engineering</a><br>
+      <a class="menu-theatre" href="theatre.html">Theatre</a><br>
+     <a href="projects.html">Projects</a><br>
+      <a class="menu-contact" href="contact.html">Contact</a>
+         </div>
+          <div class="banner-items flex-column-right flex-item">
+        <p>&copy; Zoey Zilber 2024</p>
+          </div>
+      </div>
+</head>
 </html>
