--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Howard Zilber |Contact</title>
+  <title>Zoey Zilber |Contact</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/zoeyzilber_512x512_icon.png">
+  <link rel="icon" type="image/x-icon" sizes="512x512" href="images/zoeyzilber.ico">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -16,7 +16,7 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
-    .menu-index {
+    .menu-contact {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
       font-weight: 700 !important;
@@ -29,57 +29,40 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <h2>About Me</h2>
-        <hr>
-          <p class="text">
-              <img class="image image-wrap-text max-width-400" src="images/ZoeyPhoto.jpg">
-              I am a third year engineering and theater double major at Smith College. My academic interests are primarily in biomedical engineering but I am open to other areas where I can build on my lab skills, coding and 3D modeling skills as well as my interest in medicine. With regards to theatre, I have experience in lighting, sound, props, set and design of those four areas.
-          <br> Current hobbies/interests: Cooking, guitars, ham radio, change bell ringing, video games, knife throwing, and photography/videography.
-          </p>
-        </div>
-        <!--End Intro-->
         <div class="flex-row">
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h2 id="list-of-projects">Featured</h2>
+          <div class="flex-item flex-column">
+            <h2 id="survey">Links</h2>
             <hr>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/everybodyposter.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.smith.edu/news-events/news/everybody">Smith College Theatre: Everybody by Branden Jacob-Jenkins</a></h3>
             <p class="text">
-              Directed by Kim Stauffer. Set designer Alina Tschumakow ’26, lighting designer Via Sussman ’26, faculty costume designer Kiki Smith, sound designer Zoey Zilber '25, props by Tamarin Camp ’25, and stage managed by Elie Berman ’25.
+              If you have questions or want to get in touch with with me, I am reachable at the following social media sites as well as the contact form at the bottom of the page.
             </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/smithlogo.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-          <h3><a class="highlight-text">Attending Smith College</a></h3>
-            <p class="text"> 
-            I was accepted into Smith College early decision.
-            </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-600" src="images/bostonnews.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.boston25news.com/news/hs-students-uncover-names-stories-of-patients-buried-in-unnamed-graves/888603965/">Boston News Article: HS students uncover names, stories of patients buried in unnamed graves</a></h3>
-            <p class="text">  
-            Boston News interview from highschool where we researched the stories of the ~300 people who were burried in Metfern Cemetery. I researched and wrote 40+ stories on these individuals which was put into a book about U.S. disability history, the Fernald school, and Metfern Cemetery. A website was also created which can be found <a href=”http://www.metfern.org/”>here</a>. The research involved coding a program which filtered out thousands of bios and documents when searching for the people on Ancestry.com
-            </p>
-          </div>
-        </div>
+            <span align="center">
+              <a href="https://www.linkedin.com/in/zoey-zilber-127766207" target="_blank"><img width ="400" border="0" margin="50px" align="center" src="images/LI-Logo.png"/></a>
+              <a href="https://www.facebook.com/profile.php?id=100070591150103" target="_blank"><img width ="100" border="0" margin="50px" align="center" src="images/facebook.png"/></a>
+              <a href="https://www.instagram.com/zoeyzilber/" target="_blank"><img width ="100" border="0" margin="50px" align="center" src="images/Instagram_Glyph_Gradient.png"/></a>
+              <a href="https://github.com/ZoeyZilber" target="_blank"><img width="100" border="0" margin="50px" align="center" src="images/github-mark.png"/></a>
+            </span>
+
+            <h2 id="survey">Form</h2>
+            <hr>
+            <form action="https://formspree.io/f/mrgnavrk" method="POST">
+              <label for="fname">First name:</label><br>
+              <input type="text" id="fname" name="fname" placeholder="John"><br>
+              <label for="lname">Last name:</label><br>
+              <input type="text" id="lname" name="lname" placeholder="Doe"><br>
+              <label>Your email:</label><br>
+              <input type="email" name="email" placeholder="johndoe@gmail.com"><br>
+              <label>Your message:</textarea></label><br>
+              <textarea name="message" placeholder="[Insert message here]"></textarea><br>
+              <button type="submit">Send</button>
+            </form>
+            <p class="text"></p>
       </div>
     </div>
-    <div class="footer-container"></div>
   </div>
+    </div>
+  </div>
+  <div class="footer-container"></div>
 </body>
+
 </html>
