--- a/menu.html
+++ b/menu.html
@@ -13,14 +13,14 @@
       <div class="dropdown">
         <a class="dropbtn" href="work.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
-          <a href="dropdown-content/childrensstories.html">Children's Stories</a>
-          <a href="dropdown-content/drama.html">Drama</a>
-          <a href="dropdown-content/philosophy.html">Philosophy</a>
-          <a href="dropdown-content/poetry.html">Poetry</a>
-          <a href="dropdown-content/torahcommentary.html">Torah Commentary</a>
+          <a href="childrensstories.html">Children's Stories</a>
+          <a href="drama.html">Drama</a>
+          <a href="philosophy.html">Philosophy</a>
+          <a href="poetry.html">Poetry</a>
+          <a href="torahcommentary.html">Torah Commentary</a>
         </div>
       </div>
-      <a class="menu-contact" href="about.html">About</a>
+      <a class="menu-about" href="about.html">About</a>
       <a class="menu-contact" href="contact.html">Contact</a>
     </div>
   </div>
