--- a/footer.html
+++ b/footer.html
@@ -12,8 +12,8 @@
       <a class="menu-contact" href="contact.html">Contact</a>
          </div>
           <div class="banner-items flex-column-right flex-item">
-        <p>&copy; Howard Zilber 2024 <br>
-        &copy; Zoey Zilber 2024</p>
+        <p>&copy; Website Content Howard Zilber 2024 <br>
+        &copy; Code & Design Zoey Zilber 2024</p>
           </div>
       </div>
 </head>
