--- a/footer.html
+++ b/footer.html
@@ -12,8 +12,8 @@
       <a class="menu-contact" href="contact.html">Contact</a>
          </div>
           <div class="banner-items flex-column-right flex-item">
-        <p>Website Content Howard Zilber &copy;2024 <br>
-        Code & Design by Zoey Zilber &copy;2024</p>
+        <p><em>Website Content</em> by Howard Zilber &copy;2024 <br>
+        <em>Code & Design</em> by Zoey Zilber &copy;2024</p>
           </div>
       </div>
 </head>
