--- a/about.html
+++ b/about.html
@@ -29,53 +29,22 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <h2>About Me</h2>
-        <hr>
+        <h2>Letter from The Artist</h2>
           <p class="text">
-              <img class="image image-wrap-text max-width-400" src="images/ZoeyPhoto.jpg">
-              I am a third year engineering and theater double major at Smith College. My academic interests are primarily in biomedical engineering but I am open to other areas where I can build on my lab skills, coding and 3D modeling skills as well as my interest in medicine. With regards to theatre, I have experience in lighting, sound, props, set and design of those four areas.
-          <br> Current hobbies/interests: Cooking, guitars, ham radio, change bell ringing, video games, knife throwing, and photography/videography.
+              <img class="image image-wrap-text max-width-400" src="src/images/howardzilber_headshot.png">
+              Friends,<br>
+When I was very young I read history and biography and was excited by politics. I wanted to help perfect the world through political action. But during my teenage years it became obvious that my true interests and talents were intellectual and artistic. I formed a vague intention of being a writer.
+In college I studied philosophy, and in graduate school as well. I began to have ideas I wanted to develop but I knew that to do so I needed to further educate myself and gather life experience.
+The desire to write was still there. I assumed it would be fiction. But my early discarded stories were too self-conscious, idea driven, and derivative. I read a book by Walter Kerr on the theatre that emphasized the mythic larger than life quality of the best of drama. I was convinced.
+Since then I have written many plays and musicals. And when I manage to get them before an audience they are very well received. Over the years some poetry and children’s stories sneaked in. In recent years realizing that my philosophical ideas had matured, a clearer understanding of mortality nudged me into writing philosophy and Torah commentary.
+It may seem that I am writing too many things. I may be. But all the work I do I feel compelled to do. I am much better at making work than marketing it, and I would much rather be at home writing than in a meeting. But I do not make my work just for me. I have a strong urge to share it with others. That explains why this website was created.
+Though I wish to share, all the work on this website is protected by copyright and cannot be used in commercial way without my permission.
+That said, please look, read, listen and enjoy. Any helpful comments would be appreciated, as would opportunities for collaboration.  I would especially appreciate any help that get this work a bit further into the world.
+I have two reasons I think I am here on earth: to be father to my daughter Zoey, and to make this work.
+All blessings,<br>
+Howard<br>
+
           </p>
-        </div>
-        <!--End Intro-->
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h2 id="list-of-projects">Featured</h2>
-            <hr>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/everybodyposter.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.smith.edu/news-events/news/everybody">Smith College Theatre: Everybody by Branden Jacob-Jenkins</a></h3>
-            <p class="text">
-              Directed by Kim Stauffer. Set designer Alina Tschumakow ’26, lighting designer Via Sussman ’26, faculty costume designer Kiki Smith, sound designer Zoey Zilber '25, props by Tamarin Camp ’25, and stage managed by Elie Berman ’25.
-            </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/smithlogo.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-          <h3><a class="highlight-text">Attending Smith College</a></h3>
-            <p class="text"> 
-            I was accepted into Smith College early decision.
-            </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-600" src="images/bostonnews.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.boston25news.com/news/hs-students-uncover-names-stories-of-patients-buried-in-unnamed-graves/888603965/">Boston News Article: HS students uncover names, stories of patients buried in unnamed graves</a></h3>
-            <p class="text">  
-            Boston News interview from highschool where we researched the stories of the ~300 people who were burried in Metfern Cemetery. I researched and wrote 40+ stories on these individuals which was put into a book about U.S. disability history, the Fernald school, and Metfern Cemetery. A website was also created which can be found <a href=”http://www.metfern.org/”>here</a>. The research involved coding a program which filtered out thousands of bios and documents when searching for the people on Ancestry.com
-            </p>
-          </div>
         </div>
       </div>
     </div>
