--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <div class="content-table flex-column">
         <h2>Letter from The Artist</h2>
           <p class="text">
-              <img class="image wrap-text image-max-width-400" src="src/images/howardzilber_headshot.png">
+              <img class="image image-wrap-text max-width-400" src="src/images/howardzilber_headshot.png">
               Friends,<br>
 When I was very young I read history and biography and was excited by politics. I wanted to help perfect the world through political action. But during my teenage years it became obvious that my true interests and talents were intellectual and artistic. I formed a vague intention of being a writer.
 In college I studied philosophy, and in graduate school as well. I began to have ideas I wanted to develop but I knew that to do so I needed to further educate myself and gather life experience.
