--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,8 @@
             <h2 id="survey">Links</h2>
             <hr>
             <p class="text">
-              If you have questions or want to get in touch with with me, I am reachable at the following social media sites as well as the contact form at the bottom of the page.
+              Feel free to leave a message!
             </p>
-            <span align="center">
-              <a href="https://www.linkedin.com/in/zoey-zilber-127766207" target="_blank"><img width ="400" border="0" margin="50px" align="center" src="images/LI-Logo.png"/></a>
-              <a href="https://www.facebook.com/profile.php?id=100070591150103" target="_blank"><img width ="100" border="0" margin="50px" align="center" src="images/facebook.png"/></a>
-              <a href="https://www.instagram.com/zoeyzilber/" target="_blank"><img width ="100" border="0" margin="50px" align="center" src="images/Instagram_Glyph_Gradient.png"/></a>
-              <a href="https://github.com/ZoeyZilber" target="_blank"><img width="100" border="0" margin="50px" align="center" src="images/github-mark.png"/></a>
-            </span>
 
             <h2 id="survey">Form</h2>
             <hr>
