--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
       <a href="index.html">Home</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
-      <img src="images/menu.png">
+      <img src="src/images/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
       <a class="menu-index" href="index.html">Home</a>
