--- a/menu.html
+++ b/menu.html
@@ -13,11 +13,11 @@
       <div class="dropdown">
         <a class="dropbtn" href="work.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
-          <a href="childrensstories.html">Children's Stories</a>
-          <a href="drama.html">Drama</a>
-          <a href="philosophy.html">Philosophy</a>
-          <a href="poetry.html">Poetry</a>
-          <a href="torahcommentary.html">Torah Commentary</a>
+          <a href="work/childrensstories.html">Children's Stories</a>
+          <a href="work/drama.html">Drama</a>
+          <a href="work/philosophy.html">Philosophy</a>
+          <a href="work/poetry.html">Poetry</a>
+          <a href="work/torahcommentary.html">Torah Commentary</a>
         </div>
       </div>
       <a class="menu-about" href="about.html">About</a>
