--- a/menu.html
+++ b/menu.html
@@ -6,18 +6,18 @@
       <a href="index.html">Home</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
-      <img src="src/images/menu.png">
+      <img src="/src/images/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
       <a class="menu-index" href="index.html">Home</a>
       <div class="dropdown">
         <a class="dropbtn" href="work.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
-          <a href="work/childrensstories.html">Children's Stories</a>
-          <a href="work/drama.html">Drama</a>
-          <a href="work/philosophy.html">Philosophy</a>
-          <a href="work/poetry.html">Poetry</a>
-          <a href="work/torahcommentary.html">Torah Commentary</a>
+          <a href="/work/childrensstories.html">Children's Stories</a>
+          <a href="/work/drama.html">Drama</a>
+          <a href="/work/philosophy.html">Philosophy</a>
+          <a href="/work/poetry.html">Poetry</a>
+          <a href="/work/torahcommentary.html">Torah Commentary</a>
         </div>
       </div>
       <a class="menu-about" href="about.html">About</a>
