--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/footer.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/footer.js"></script>
   <style>
     .menu-index {
       color: rgb(255, 255, 255) !important;
