--- a/menu.html
+++ b/menu.html
@@ -3,13 +3,13 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="index.html">Home</a>
+      <a href="/index.html">Home</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img src="/src/images/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a class="menu-index" href="index.html">Home</a>
+      <a class="menu-index" href="/index.html">Home</a>
       <div class="dropdown">
         <a class="dropbtn" href="work.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
@@ -20,8 +20,8 @@
           <a href="/work/torahcommentary.html">Torah Commentary</a>
         </div>
       </div>
-      <a class="menu-about" href="about.html">About</a>
-      <a class="menu-contact" href="contact.html">Contact</a>
+      <a class="menu-about" href="/about.html">About</a>
+      <a class="menu-contact" href="/contact.html">Contact</a>
     </div>
   </div>
 </div>
