--- a/work/drama.html
+++ b/work/drama.html
@@ -32,9 +32,12 @@
         <h2>About Me</h2>
         <hr>
           <p class="text">
-              <img class="image image-wrap-text max-width-400" src="images/ZoeyPhoto.jpg">
-              I am a third year engineering and theater double major at Smith College. My academic interests are primarily in biomedical engineering but I am open to other areas where I can build on my lab skills, coding and 3D modeling skills as well as my interest in medicine. With regards to theatre, I have experience in lighting, sound, props, set and design of those four areas.
-          <br> Current hobbies/interests: Cooking, guitars, ham radio, change bell ringing, video games, knife throwing, and photography/videography.
+              When I was young I loved reading novels. So when I started thinking about writing imaginative literature, I assumed it would be fiction. But my first attempts weren’t very promising. 
+<br>I happened to come across a book by Walter Kerr about the theatre. He emphasized the mythic origins of drama, the way that at its best theatre is larger than life, and incredibly intense. I was hooked. I wrote a first overly ambitious play, which somehow combined Oedipus Rex and the Holocaust! But I persisted and got better. Soon elements of verse showed up. This puzzled me. But then I started singing those parts. That’s how I came to write musicals.
+The thing about my work that’s quite unusual is how varied it is in tone and subject matter. The Pied Piper is a sweet, lighthearted musical. <em>Saul</em> is a tragedy. <em>The Odyssey</em> is soaring and romantic. <em>The Unwitnessing of a Murder</em> is as dark as a black hole. And there are many others, each with it’s specific world.
+All I can say is life is similarly varied. Imagine all the things happening at this very moment. While lovers are falling in love, others are being tortured. While bombs fall from the sky, babies are being born.
+<br>That is life. That is art.
+
           </p>
         </div>
         <!--End Intro-->
