--- a/work/drama.html
+++ b/work/drama.html
@@ -41,27 +41,28 @@ All I can say is life is similarly varied. Imagine all the things happening at t
           </p>
         </div>
       <section class="tiles">
-	<article class="style1">
-		<span class="image">
-			<img src="/images/photos/_DSC0032.jpeg" alt="" />
-				</span>
-					<a href="generic.html">
-						<div class="content">
-							<p>Click to Enlarge</p>
-								</div>
-								</a>
-								</article>
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
-										<img src="/images/photos/_DSC0047.jpeg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
+										<h2>Magna</h2>
 										<div class="content">
-											<p>Click to Enlarge</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-      </section>
+								<article class="style2">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Lorem</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
       </div>
     <div class="footer-container"></div>
   </div>
