--- a/work/drama.html
+++ b/work/drama.html
@@ -43,7 +43,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
       <section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="/src/images/plays.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Magna</h2>
@@ -54,7 +54,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="/src/images/plays.jpg alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Lorem</h2>
