--- a/work/drama.html
+++ b/work/drama.html
@@ -46,9 +46,9 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 										<img src="/src/images/plays.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>Plays</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>See More</p>
 										</div>
 									</a>
 								</article>
@@ -57,9 +57,9 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 										<img src="/src/images/plays.jpg alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Musicals</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>See More</p>
 										</div>
 									</a>
 								</article>
