--- a/work/drama.html
+++ b/work/drama.html
@@ -54,7 +54,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="/src/images/plays.png" alt="" />
+										<img src="/src/images/musicals.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Musicals</h2>
