--- a/work/drama.html
+++ b/work/drama.html
@@ -48,7 +48,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 									<a href="generic.html">
 										<h2>Plays</h2>
 										<div class="content">
-											<p>See More</p>
+											<p>Click to Explore</p>
 										</div>
 									</a>
 								</article>
@@ -59,7 +59,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 									<a href="generic.html">
 										<h2>Musicals</h2>
 										<div class="content">
-											<p>See More</p>
+											<p>Click to Explore</p>
 										</div>
 									</a>
 								</article>
