--- a/work/drama.html
+++ b/work/drama.html
@@ -45,7 +45,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 									<span class="image">
 										<img src="/src/images/plays.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="/work/plays.html">
 										<h2>Plays</h2>
 										<div class="content">
 											<p>Click to Explore</p>
@@ -56,7 +56,7 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 									<span class="image">
 										<img src="/src/images/musicals.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="/work/musicals.html">
 										<h2>Musicals</h2>
 										<div class="content">
 											<p>Click to Explore</p>
