--- a/work/drama.html
+++ b/work/drama.html
@@ -40,31 +40,36 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 
           </p>
         </div>
+	     <div class="flex-row">
+          <div class="flex-item flex-column">
       <section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="/src/images/plays.png" alt="" />
-									</span>
-									<a href="/work/plays.html">
-										<h2>Plays</h2>
-										<div class="content">
-											<p>Click to Explore</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="/src/images/musicals.png" alt="" />
-									</span>
-									<a href="/work/musicals.html">
-										<h2>Musicals</h2>
-										<div class="content">
-											<p>Click to Explore</p>
-										</div>
-									</a>
-								</article>
+	<article class="style1">
+		<span class="image">
+		<img src="/src/images/plays.png" alt="" />
+		</span>
+	<a href="/work/plays.html">
+		<h2>Plays</h2>
+		<div class="content">
+		<p>Click to Explore</p>
+	</div>
+	</a>
+	</article>
+	<article class="style2">
+		<span class="image">
+	<img src="/src/images/musicals.png" alt="" />
+		</span>
+	<a href="/work/musicals.html">
+		<h2>Musicals</h2>
+		<div class="content">
+		<p>Click to Explore</p>
+		</div>
+			</a>
+		</article>
+      </section>
       </div>
+	     </div>
     <div class="footer-container"></div>
+    </div>
   </div>
 </body>
 </html>
