--- a/work/drama.html
+++ b/work/drama.html
@@ -29,8 +29,7 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <h2>About Me</h2>
-        <hr>
+        <h2>Drama</h2>
           <p class="text">
               When I was young I loved reading novels. So when I started thinking about writing imaginative literature, I assumed it would be fiction. But my first attempts weren’t very promising. 
 <br>I happened to come across a book by Walter Kerr about the theatre. He emphasized the mythic origins of drama, the way that at its best theatre is larger than life, and incredibly intense. I was hooked. I wrote a first overly ambitious play, which somehow combined Oedipus Rex and the Holocaust! But I persisted and got better. Soon elements of verse showed up. This puzzled me. But then I started singing those parts. That’s how I came to write musicals.
