--- a/work/musicals.html
+++ b/work/musicals.html
@@ -29,32 +29,13 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <h2>About Me</h2>
+        <h2>Musicals</h2>
         </div>
-      <section class="tiles">
-	<article class="style1">
-		<span class="image">
-		<img src="/src/images/plays.png" alt="" />
-		</span>
-	<a href="/work/plays.html">
-		<h2>Plays</h2>
-		<div class="content">
-		<p>Click to Explore</p>
-	</div>
-	</a>
-	</article>
-	<article class="style2">
-		<span class="image">
-	<img src="/src/images/musicals.png" alt="" />
-		</span>
-	<a href="/work/musicals.html">
-		<h2>Musicals</h2>
-		<div class="content">
-		<p>Click to Explore</p>
-		</div>
-			</a>
-		</article>
-      </section>
+      <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
     <div class="footer-container"></div>
     </div>
   </div>
