--- a/work/musicals.html
+++ b/work/musicals.html
@@ -30,6 +30,7 @@
     <div class="content">
       <div class="content-table flex-column">
         <h2>Musicals</h2>
+        <h3>Pied Piper</h3>
         </div>
       <audio controls>
   <source src="horse.ogg" type="audio/ogg">
