--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <div class="menu-items flex-row-center flex-item">
       <a class="menu-index" href="/index.html">Home</a>
       <div class="dropdown">
-        <a class="dropbtn" href="work.html">Work<i class="fas fa-caret-down"></i></a>
+        <a class="dropbtn" href="/work.html">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <a href="/work/childrensstories.html">Children's Stories</a>
           <a href="/work/drama.html">Drama</a>
