--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <title>Howard Zilber |About</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" sizes="16x16" href="images/howardzilber.ico">
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="images/icon/howardzilber.ico">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
