--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <div class="content-table flex-column">
         <h2>Letter from The Artist</h2>
           <p class="text">
-              <img class="image image-wrap-text max-width-200" src="src/images/howardzilber_headshot.png">
+              
               Friends,<br>
 When I was very young I read history and biography and was excited by politics. I wanted to help perfect the world through political action. But during my teenage years it became obvious that my true interests and talents were intellectual and artistic. I formed a vague intention of being a writer.
 In college I studied philosophy, and in graduate school as well. I began to have ideas I wanted to develop but I knew that to do so I needed to further educate myself and gather life experience.
@@ -43,7 +43,7 @@ That said, please look, read, listen and enjoy. Any helpful comments would be ap
 I have two reasons I think I am here on earth: to be father to my daughter Zoey, and to make this work.
 All blessings,<br>
 Howard<br>
-
+<img class="image max-width-300" src="src/images/howardzilber_headshot.png">
           </p>
         </div>
       </div>
