--- a/work/musicals.html
+++ b/work/musicals.html
@@ -35,7 +35,12 @@
   <source src="horse.ogg" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
-        </div>  
+        <h3>Mona Judy America</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>  
     <div class="footer-container"></div>
     </div>
   </div>
