--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <p class="text">
-              Feel free to leave a message!
-            </p>
+            <h3>Contact Form</h3>
             <form action="https://formspree.io/f/mrgnavrk" method="POST">
               <label for="fname">First name:</label><br>
               <input type="text" id="fname" name="fname" placeholder="John"><br>
@@ -45,7 +43,8 @@
               <textarea name="message" placeholder="[Insert message here]"></textarea><br>
               <button type="submit">Send</button>
             </form>
-            <p class="text"></p>
+            <h3>Check Out My Social Media</h3>
+            
       </div>
     </div>
   </div>
