--- a/work/musicals.html
+++ b/work/musicals.html
@@ -31,15 +31,16 @@
       <div class="content-table flex-column">
         <h2>Musicals</h2>
         <h3>Pied Piper</h3>
+        <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true"></iframe>
         <audio controls>
-  <source src="horse.ogg" type="audio/ogg">
+  <source src="/src/audio/I'm The Pied Piper.m4a" type="audio/m4a">
 Your browser does not support the audio element.
 </audio>
         <h3>Mona Judy America</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="350" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="300" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+      <iframe width="375" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>  
     <div class="footer-container"></div>
     </div>
