--- a/work/musicals.html
+++ b/work/musicals.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Howard Zilber |Drama</title>
+  <title>Howard Zilber |Drama |Musicals</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
  <link rel="icon" type="image/x-icon" sizes="16x16" href="/images/icons/howardzilber.ico">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
