--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               <textarea name="message" placeholder="[Insert message here]"></textarea><br>
               <button type="submit">Send</button>
             </form>
-            <h3>Check Out My Social Media</h3>
+            <h3>Social Media</h3>
              <a href="https://youtube.com/@howardzilber?si=JvPLT3QVKKWzuJoc" target="_blank"><img width ="400" border="0" margin="50px" align="center" src="/src/images/logos/yt_logo_rgb_dark.png"/></a>
       </div>
     </div>
