--- a/work/philosophy.html
+++ b/work/philosophy.html
@@ -29,53 +29,15 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <h2>About Me</h2>
-        <hr>
-          <p class="text">
-              <img class="image image-wrap-text max-width-400" src="images/ZoeyPhoto.jpg">
-              I am a third year engineering and theater double major at Smith College. My academic interests are primarily in biomedical engineering but I am open to other areas where I can build on my lab skills, coding and 3D modeling skills as well as my interest in medicine. With regards to theatre, I have experience in lighting, sound, props, set and design of those four areas.
-          <br> Current hobbies/interests: Cooking, guitars, ham radio, change bell ringing, video games, knife throwing, and photography/videography.
+         <h2>Philosophy</h2>
+         <p class="text">
+             When I was in college I majored in philosophy. I also did my graduate work in philosophy. During that time some of the ideas that appear here began to form. But I knew I needed to study math and science, as well as get a better grounding in the history of philosophy before I could properly philosophize.
+For many years I wrote mostly plays and musicals while doing the studying I thought I needed. In recent years, in part because much of that studying was done, and in part because of increasing awareness of mortality, I have started writing philosophy. I call the result, I hope not too grandly: Philosophical Essays and Excursions.
+The essays are a bit more formal, the excursions sometimes even playful. The intended reader is not only trained philosophers but anyone who delights in thinking about the world.
+I’ll add that though these pieces are intended to cohere as a whole –the work is still in progress- they are written so they can be read independently. As a result there is some repetition. But things worth saying are often worth repeating.
           </p>
-        </div>
-        <!--End Intro-->
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h2 id="list-of-projects">Featured</h2>
-            <hr>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/everybodyposter.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.smith.edu/news-events/news/everybody">Smith College Theatre: Everybody by Branden Jacob-Jenkins</a></h3>
-            <p class="text">
-              Directed by Kim Stauffer. Set designer Alina Tschumakow ’26, lighting designer Via Sussman ’26, faculty costume designer Kiki Smith, sound designer Zoey Zilber '25, props by Tamarin Camp ’25, and stage managed by Elie Berman ’25.
-            </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="images/smithlogo.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-          <h3><a class="highlight-text">Attending Smith College</a></h3>
-            <p class="text"> 
-            I was accepted into Smith College early decision.
-            </p>
-          </div>
-        </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-600" src="images/bostonnews.jpg">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <h3><a class="highlight-text" href="https://www.boston25news.com/news/hs-students-uncover-names-stories-of-patients-buried-in-unnamed-graves/888603965/">Boston News Article: HS students uncover names, stories of patients buried in unnamed graves</a></h3>
-            <p class="text">  
-            Boston News interview from highschool where we researched the stories of the ~300 people who were burried in Metfern Cemetery. I researched and wrote 40+ stories on these individuals which was put into a book about U.S. disability history, the Fernald school, and Metfern Cemetery. A website was also created which can be found <a href=”http://www.metfern.org/”>here</a>. The research involved coding a program which filtered out thousands of bios and documents when searching for the people on Ancestry.com
-            </p>
-          </div>
+        <h3>1a.In Defense of the Self</h3>
+        <iframe src="https://docs.google.com/document/d/1tuEHWFb8uLJCpZFgZxASe4bvLfsH3sBa/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
         </div>
       </div>
     </div>
