--- a/work/poetry.html
+++ b/work/poetry.html
@@ -30,8 +30,15 @@
     <div class="content">
       <div class="content-table flex-column">
         <h2>Poetry</h2>
-        <h3>Working Free</h3>
-        <iframe src="https://docs.google.com/document/d/1zglHICTpkr8UOm3TDDeUmoZD5y2yCg4H/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
+        <p class="text">
+             I was so used to writing dialogue, so used to speaking as other people that it required a kind of transition to writing something as personal as poetry. A Calligraphy of Bone started as the poetry of a particular fictional character. As the work proceeded it became more and more my own, but always with a bit of doubt about who exactly was writing.
+From there I moved on to Sabbatical Sonnets. They are “sonnets” only in that they are fourteen lines. They are “sabbatical” because I did not seek them out but wrote them when they came. At some point fourteen-lined work stopped coming, to be replaced by poems with only four lines. Not wanting to be thought “square”, I called them Trapezoids.
+Constraints were beginning to wear on me. I had written as someone else. I had poured my plaster into rigid molds. I yearned for a bit of freedom. The result was Working Free.
+Currently I am working on three volumes: One Hundred-Eighty Droplets, Psalms, and Clothe Me in Your Nakedness and Other Poems. I look forward to sharing them when they are reader-ready.
+I said I began by saying that my first poems were not in my own voice. Now I write more personally. However, I still find myself, at least some of the time, writing from perspectives I have only observed or imagined.
+  </p>
+        <h3>A Calligraphy of Bone</h3>
+        <iframe src="https://docs.google.com/document/d/1VAlLHcTSKjLmZkCLMPWw7FoCbuC1F3wF/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
         </div>
       </div>
     </div>
