--- a/work/childrensstories.html
+++ b/work/childrensstories.html
@@ -35,7 +35,7 @@ Still, it was a surprise to me when I woke up one morning with an idea for a kid
 They fall into two groups. There are the stories that just came. Then there are the stories that derive from my experience as a father. Let’s call them the Zoey stories. One of those is a group of stories that hangs together and became a bigger story.
           </p>
         <h3>Socrates The Cat</h3>
-        <iframe src=""https://docs.google.com/document/d/1A_vyXy5uD9U6730JV2hvVl_Pr7lOyHWd/pub?embedded=true"" frameborder="0" width="70%" height="500"></iframe>
+        <iframe src="https://docs.google.com/document/d/1A_vyXy5uD9U6730JV2hvVl_Pr7lOyHWd/pub?embedded=true"" frameborder="0" width="70%" height="500"></iframe>
         </div>
       </div>
     </div>
