--- a/work/musicals.html
+++ b/work/musicals.html
@@ -32,16 +32,41 @@
         <h2>Musicals</h2>
         <h3>Pied Piper</h3>
         <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
-        <audio controls>
-  <source src="/src/audio/I'm The Pied Piper.m4a" type="audio/x-m4a">
+        <figure><figcaption>I'm The Pied Piper</figcaption>
+        <audio controls><source src="/src/audio/I'm The Pied Piper.m4a" type="audio/x-m4a">
 Your browser does not support the audio element.
-</audio>
+</audio></figure>
+        <figure><figcaption>It's Nice To Be Nice</figcaption>
+        <audio controls><source src="/src/audio/It's Nice To Be Nice.m4a" type="audio/x-m4a">
+Your browser does not support the audio element.
+</audio></figure>
+        <figure><figcaption>Rats</figcaption>
+        <audio controls><source src="/src/audio/Rats.m4a" type="audio/x-m4a">
+Your browser does not support the audio element.
+</audio></figure>
+        <figure><figcaption>I Will Never Climb a Mountain</figcaption>
+        <audio controls><source src="/src/audio/I Will Never Climb a Mountain.m4a" type="audio/x-m4a">
+Your browser does not support the audio element.
+</audio></figure>
         <h3>Mona Judy America</h3>
         <iframe src="https://docs.google.com/document/d/1APypKm-o8UwNMkLhtAZMPCndhX0Jy8Tx/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
         <iframe width="400" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <iframe width="400" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="400" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
       <iframe width="400" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <h3>Martin Dreams</h3>
+        <figure><figcaption>I'm Just a Man, Coretta</figcaption>
+        <audio controls><source src="/src/audio/I'm Just a Man, Coretta.m4a" type="audio/x-m4a">
+Your browser does not support the audio element.
+</audio></figure>
+        <figure><figcaption>We Shall Overcome... Someday</figcaption>
+        <audio controls><source src="/src/audio/We Shall Overcome...Someday.m4a" type="audio/x-m4a">
+Your browser does not support the audio element.
+</audio></figure>
+        <h3>Herb Smokes Herb</h3>
+         <iframe src="https://docs.google.com/document/d/18UTSAKArckpdtTHZftkonIJna8OY5tf2/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
+        <h3>Daphne in Dimension Nine</h3>
+        <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" frameborder="0" width="70%" height="500"></iframe>
       </div>  
     <div class="footer-container"></div>
     </div>
