--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
               <label>Your email:</label><br>
               <input type="email" name="email" placeholder="johndoe@gmail.com"><br>
               <label>Your message:</textarea></label><br>
-              <textarea name="message" placeholder="[Insert message here]"></textarea><br>
+              <textarea name="message" placeholder="[Insert message here]" style="height: 80px; width: 177px;"></textarea><br>
               <button type="submit">Send</button>
             </form>
             <h3>Social Media</h3>
