--- a/work/musicals.html
+++ b/work/musicals.html
@@ -31,7 +31,7 @@
       <div class="content-table flex-column">
         <h2>Musicals</h2>
         <h3>Pied Piper</h3>
-        <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" width="70%" height="500" loading="lazy"></iframe>
+        <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" width="70%" height="500" loading="eager"></iframe>
         <figure><figcaption>I'm The Pied Piper</figcaption>
         <audio controls><source src="/src/audio/I'm The Pied Piper.m4a" type="audio/x-m4a">
 Your browser does not support the audio element.
